--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack build",
+    "build": "webpack build --mode='production'",
     "dev": "webpack serve --mode='development'"
   },
   "keywords": [],
