--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack build --mode='production'",
-    "dev": "webpack serve --mode='development'"
+    "dev": "webpack serve --mode='development'",
+    "eslint-fix" : "eslint . --fix",
+    "eslint" : "eslint ."
   },
   "keywords": [],
   "author": "",
@@ -13,10 +15,18 @@
   "devDependencies": {
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^5.2.6",
+    "eslint": "^7.30.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-react": "^7.24.0",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.0.0",
     "node-sass": "^6.0.1",
+    "prettier": "2.3.2",
     "sass-loader": "^12.1.0",
     "webpack": "^5.42.0",
     "webpack-cli": "^4.7.2",
