--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build": "webpack build --mode='production'",
     "dev": "webpack serve --mode='development'",
-    "eslint-fix" : "eslint . --fix",
-    "eslint" : "eslint ."
+    "eslint-fix": "eslint . --fix",
+    "eslint": "eslint ."
   },
   "keywords": [],
   "author": "",
@@ -27,6 +27,7 @@
     "mini-css-extract-plugin": "^2.0.0",
     "node-sass": "^6.0.1",
     "prettier": "2.3.2",
+    "sass": "^1.35.2",
     "sass-loader": "^12.1.0",
     "webpack": "^5.42.0",
     "webpack-cli": "^4.7.2",
